# gethido_bot

./: .gitignore  README.md  chat_ids.txt  chat_ids_05.02.26_RP.txt  chat_ids_11.12.25_Vika.txt  chat_ids_17.06.25_Alena_not_specific.txt  chat_ids_17.06.25_Alena_specific.txt  chat_ids_23.01.25_part1.txt  chat_ids_23.01.25_part2.txt  chat_ids_29.01.26_Nastya.txt  chat_ids_all.txt  chat_ids_all_26.09.25.txt  chat_ids_all_moscow.txt  chat_ids_all_no_fin_dass.txt  chat_ids_all_not_new.txt  chat_ids_bachelor.txt  chat_ids_master.txt  chat_ids_master_02.09.25_all_september.txt  chat_ids_master_07.08.25.txt  chat_ids_master_09.09.25_all_september.txt  chat_ids_master_21.08.25.txt  chat_ids_master_22.08.25_all_september.txt  chat_ids_master_22.08.25_media.txt  chat_ids_master_23.09.25_all_september.txt  chat_ids_master_23.09.25_small.txt  chat_ids_master_25.08.25_all_september.txt  chat_ids_master_29.09.25_all_september.txt  chat_ids_master_load_reminder.txt  chat_ids_master_moscow.txt  chat_ids_master_moscow_spb.txt  chat_ids_master_moscow_spb_07.07.25_remind.txt  chat_ids_master_no_NN.txt  chat_ids_test.txt  chat_ids_work.txt  email_notifications.py  gethido_bot.py  logs.txt  parse_names.xlsx  program_contacts.csv  program_contacts.py  (+14 more)
