[project]
name = "gethido-bot"
version = "0.1.0"
description = "Telegram broadcasts and SOP evaluation notifications for online education programs."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
